# SpeederMonkey

./: CMakeLists.txt  LICENSE  node_module.h  node_native_fs.h  spde_test.cpp  spde_test_common.h
cmake/: FindMozJS.cmake
lib/: README.md  buffer.js  node_module.js  runner.js
spde/: spde.hpp  spde_caster.hpp  spde_classinfo.hpp  spde_functionbind.hpp  spde_helpers.hpp
src/: spde_test.cpp
src/jsrunner/: jsrunner.cxx
src/xoundation/: platform.h  spde.hpp  spde.hxx  spde_helper.hxx
src/xoundation/native/: node_buffer.hxx  node_module.h  node_module.hxx  node_native_fs.h  node_native_fs.hxx  speeder_native.hxx
src/xoundation/spde/: spde_caster.hpp  spde_caster.hxx  spde_classhelper.hpp  spde_classhelper.hxx  spde_classinfo.hpp  spde_classinfo.hxx  spde_common.hxx  spde_enum.hxx  spde_espwrap.hxx  spde_functionbind.hpp  spde_functionbind.hxx  spde_heroes.hxx  spde_test_common.h  spde_test_common.hxx  spde_vivalavida.hxx
src/xoundation/spde/details/: spde_caster_ext.hxx  spde_caster_numeric.hxx  spde_caster_string.hxx  spde_constructor.hxx  spde_intrusive_object.hxx  spde_method_callback_wrapper.hxx  spde_persistent_wrap.hxx  spde_property_accessor.hxx
src/xoundation/thirdpt/: js_engine.hxx
tests/: gc_test.js  inheritance_test.js  lightweight_test.js  module_test.js  moztest.js  mt.js  mt2.js  node_module.js  null_test.js  shared_ptr_test.js  spde_test.js  test_copy_and_attach.js  test_enum.js  test_intrusive_obj.js  test_mod_localexp.js  test_new_global_env.js  test_nge.js  test_shared_ptr.js  test_static.js  test_value_wrap.js  test_value_wrap_resolveadd.js
xoundation/: platform.h  spde.hpp
xoundation/native/: node_module.h  node_native_fs.h
xoundation/spde/: spde_classhelper.hpp  spde_heroes.hpp
